# ceres2018

./: .gitignore  arm.cpp  arm.hpp  control_layer_0.hpp  control_layer_1.hpp  control_layer_2.hpp  control_layer_3.hpp  control_system.c  control_system.h  dev.h  differential.c  differential.hpp  encoder.c  encoder.hpp  gp2.hpp  locator.hpp  main.c  main.cpp  motor.c  motor.h  motor.hpp  odometer.h  odometer.hpp  pid.c  pid.h  pid.hpp  positioning_action.h  pull.h  quad_decode.hpp  scheduler.hpp  secure_linear.hpp  secure_motor.hpp  side.h  trajectory_manager.h
ceres2018_msgs/: CMakeLists.txt  package.xml
desktop/: CMakeLists.txt  main.c  package.xml
hermes2/: CMakeLists.txt  control_system.c  control_system.h  differential.c  differential.h  encoder.c  encoder.h  locator.c  locator.h  main.c  main.c.autosave  motor.c  motor.h  odometer.c  odometer.h  package.xml  pid.c  pid.h  positioning_action.c  pull.h  scheduler.c  scheduler.h  secure_motor.c  secure_motor.h  speed_motor.h  trajectory_manager.c  trajectory_manager.h
